--- a/src/components/TagItem/index.module.less
+++ b/src/components/TagItem/index.module.less
@@ -50,7 +50,7 @@
     }
 
     &.active {
-      background-color: var(--active-bg-color);
+      background-color: var(--sidebar-active-bg);
       color: var(--active-text-color);
       .tagCount {
         background-color: var(--active-icon-bg);
