--- a/src/layouts/ShortSidebarLayout/components/CardLinkGraph/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/CardLinkGraph/index.module.less
@@ -19,6 +19,7 @@
     height: 100%;
     // padding: 40px;
     transition: width 0.3s;
+    background: var(--second-sidevar-background);
   }
   .edit {
     width: calc(100% - var(--graph-width));
