--- a/src/layouts/ShortSidebarLayout/components/DocumentView/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/DocumentView/index.module.less
@@ -12,6 +12,7 @@
   .sidebar {
     width: var(--sidebar-width);
     height: 100%;
+    background: var(--second-sidevar-background);
   }
   .edit {
     width: calc(100% - var(--sidebar-width));
