--- a/src/layouts/ThreeColumnLayout/Content/Card/CardsManagement/CardTabs/index.module.less
+++ b/src/layouts/ThreeColumnLayout/Content/Card/CardsManagement/CardTabs/index.module.less
@@ -7,7 +7,7 @@
   border-bottom: 8px solid var(--tab-active-color);
   position: sticky;
   top: 0;
-  background-color: var(--primary-bg-color);
+  background-color: var(--second-sidevar-background);
   z-index: 3;
   width: 100%;
   box-sizing: border-box;
@@ -30,7 +30,7 @@
       justify-content: center;
       font-size: 12px;
       border-radius: 10px;
-      background-color: var(--common-hover-bg);
+      background-color: var(--main-bg-color);
       cursor: pointer;
     }
   }
@@ -38,7 +38,7 @@
 
 .contextMenu {
   position: fixed;
-  z-index: 1;
+  z-index: 5;
   width: 120px;
   padding: 12px;
   border-radius: 8px;
