--- a/src/layouts/ThreeColumnLayout/List/DocumentList/DocumentItem/index.module.less
+++ b/src/layouts/ThreeColumnLayout/List/DocumentList/DocumentItem/index.module.less
@@ -13,8 +13,8 @@
     cursor: pointer;
     border: 1px solid transparent;
     &.active {
-      background-color: var(--active-bg-color);
-      color: var(--active-text-color);
+      background-color: var(--sidebar-active-bg);
+      //color: var(--active-text-color);
     }
     &.top {
       &::before {
