--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -1,5 +1,6 @@
 html[data-theme="dark"] {
-  --primary-bg-color: #110f16;
+  --primary-bg-color: #0a0a0a;
+  --main-bg-color: #121212;
   --line-color: rgba(86, 84, 84, .8);
   --text-normal: rgba(255, 255, 255, .9);
   --code-normal: #FBDE2D;
@@ -15,7 +16,7 @@ html[data-theme="dark"] {
   --scroller-track-background-color: rgba(255, 255, 255, 0.12);
   --scroller-thumb-background-color: rgba(255, 255, 255, 0.24);
   --normal-card-bg: #1D1F22;
-  --common-hover-bg: #404246;
+  --common-hover-bg: #222222;
   --normal-icon-bg: rgba(255, 255, 255, 0.1);
   --active-bg-color: hsl(168, 80%, 10%);
   --active-text-color: hsl(168, 50%, 80%);
@@ -23,4 +24,8 @@ html[data-theme="dark"] {
   --bullet-list-item-bg: hsl(168, 45%, 90%);
   --bullet-list-item-shodow: 0 0 0 .3em hsla(168, 90%, 85%, 0.55);
   --selection-color: #182F3F;
+  --sidebar-background: transparent;
+  --sidebar-active-bg: #2E2E2E;
+  --second-sidevar-background: #262626;
+  --shadow: 0 2px 4px rgba(0,0,0,0.3), 0 0 12px rgba(255,255,255,0.08);
 }
