--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -1,5 +1,6 @@
 html[data-theme='light'] {
-  --primary-bg-color: #f6f6f6;
+  --primary-bg-color: #ECEDEE;
+  --main-bg-color: #fff;
   --line-color: #E9E9E9;
   --text-normal: black;
   --code-normal: #18045f;
@@ -7,7 +8,7 @@ html[data-theme='light'] {
   --box-shadow1: 0 3px 6px 0 rgba(0, 0, 0, .15);
   --box-shadow2: 0 4px 21px -12px rgba(0, 0, 0, .6);
   --block-panel-active-bg: #e6e6e6;
-  --common-hover-bg: rgba(0, 0, 0, .03);
+  --common-hover-bg: #F5F6F6;
   --table-border-color: #dadde1;
   --table-odd-bg: #e6e6e666;
   --card-bg-color: rgb(255 255 255 / 0.4);
@@ -16,7 +17,6 @@ html[data-theme='light'] {
   --scroller-track-background-color: rgba(0, 0, 0, 0.04);
   --scroller-thumb-background-color: rgba(0, 0, 0, 0.06);
   --normal-card-bg: hsl(168, 8%, 95%);
-  --common-hover-bg: hsl(168, 8%, 90%);
   --normal-icon-bg: #e8e8e8;
   --active-bg-color: hsl(168, 80%, 95%);
   --active-text-color: hsl(168, 50%, 30%);
@@ -25,5 +25,9 @@ html[data-theme='light'] {
   --bullet-list-item-bg: hsl(168, 10%, 45%);
   --bullet-list-item-shodow: 0 0 0 .3em hsla(168, 90%, 85%, 0.55);
   --selection-color: #D9F0FF;
+  --sidebar-background: transparent;
+  --sidebar-active-bg: #FFFFFF;
+  --second-sidevar-background: #f2f3f4;
+  --shadow: 0 0 12px rgba(0, 0, 0, 0.1);
 }
 
