--- a/src/layouts/ShortSidebarLayout/components/CardView/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/CardView/index.module.less
@@ -11,20 +11,16 @@
   --card-tree-width: 240px;
   --card-grid-width: calc(100% - var(--card-tree-width));
   --list-width: calc(var(--card-grid-width) + var(--card-tree-width));
-  &.hideCardTree {
-    --card-tree-width: 0px;
-    .list .cardTree {
-      padding-left: 0;
-    }
-  }
   &.showEdit {
-    --card-grid-width: 360px;
+    --card-grid-width: 0px;
+    .cardContainer {
+      padding: 0;
+    }
   }
   
   .list {
     width: var(--list-width);
     overflow: hidden;
-    transition: width 0.3s;
     .select {
       display: flex;
       margin: 20px 40px;
@@ -48,51 +44,73 @@
     }
     .cards {
       display: flex;
-      height: calc(100% - 100px);
+      height: 100%;
     }
     .cardTree {
-      .header {
-        position: sticky;
-        background-color: var(--primary-bg-color);
-        z-index: 1;
-        top: 0;
-        display: flex;
-        justify-content: space-between;
-        padding: 4px;
-        border-bottom: 1px solid var(--line-color);
-        .title {
-          // margin-left: calc(15px - 0.5em);
-          color: gray;
-        }
-        .icon {
-          margin-left: auto;
-          cursor: pointer;
-          margin-right: 10px;
-        }
-      }
-      padding-left: 40px;
+      background: var(--second-sidevar-background);
+      border: 20px solid transparent;
       box-sizing: border-box;
       transition: all 0.3s;
       width: var(--card-tree-width);
       height: 100%;
-      overflow-y: auto;
+      overflow: auto;
       &::-webkit-scrollbar {
         display: none;
       }
     }
-    .cardGridContainer {
+    .cardContainer {
       width: var(--card-grid-width);
       height: 100%;
-      display: flex;
-      flex-wrap: wrap;
-      align-content: flex-start;
-      overflow-y: auto;
+      //padding: 20px 40px;
       box-sizing: border-box;
-      padding: 0 40px;
-      transition: width 0.3s;
-      .item {
-        height: 180px;
-        margin-bottom: 0;
+      .cardList {
+        padding: 20px 40px;
+        height: 100%;
+        max-width: 720px;
+        margin: 0 auto;
+      }
+      .header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 60px;
+        .left {
+          height: 100%;
+          display: flex;
+          align-items: center;
+          gap: 12px;
+          .title {
+            font-size: 30px;
+            font-weight: bold;
+          }
+        }
+        .addCard {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          cursor: pointer;
+          width: 40px;
+          height: 40px;
+          background: #00C7A8;
+          border-radius: 50%;
+          color: #FFF;
+        }
+      }
+      .createCard {
+        margin-bottom: 12px;
+      }
+      .list {
+        border-bottom: 20px solid transparent;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 20px;
+        overflow-y: auto;
+        height: calc(100% - 60px);
+        &::-webkit-scrollbar {
+          display: none;
+        }
       }
     }
   }
