--- a/src/layouts/ShortSidebarLayout/components/ProjectView/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/ProjectView/index.module.less
@@ -11,6 +11,7 @@
     height: 100%;
     transition: width 0.3s;
     overflow: hidden;
+    background: var(--second-sidevar-background);
   }
   .edit {
     width: calc(100% - var(--sidebar-width));
