--- a/src/layouts/ShortSidebarLayout/components/RightSidebar/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/RightSidebar/index.module.less
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   flex: none;
   height: 100%;
+  background: var(--sidebar-background);
   .wrapContainer {
     height: 100%;
     box-sizing: border-box;
