--- a/src/layouts/ShortSidebarLayout/components/Titlebar/CardTitlebar/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/Titlebar/CardTitlebar/index.module.less
@@ -1,20 +1,11 @@
 .nav {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 8px;
+  border-radius: 8px;
+  padding: 4px;
   .item {
     cursor: pointer;
     position: relative;
-    .line {
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      background-color: var(--active-text-color);
-      bottom: -20px;
-      left: 0;
-    }
-    &.active {
-      color: var(--active-text-color);
-    }
   }
 }
