--- a/src/layouts/components/Titlebar/index.module.less
+++ b/src/layouts/components/Titlebar/index.module.less
@@ -4,13 +4,26 @@
   height: 100%;
   display: flex;
   align-items: center;
-  .sidebar {
-    width: 1.5em;
-    height: 1.5em;
-    cursor: pointer;
+  gap: 8px;
+  &.sidebarHide {
+    margin-left: 64px;
   }
   .windowControl {
     margin-left: auto;
+  }
+  .item {
+    -webkit-app-region: no-drag;
+    width: 26px;
+    height: 26px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    &:hover {
+      background-color: var(--common-hover-bg);
+      border-radius: 4px;
+      cursor: pointer;
+    }
   }
 }
 
@@ -24,6 +37,7 @@
   left: 0;
   top: -100%;
   transition: top 0.3s ease-in-out;
+  -webkit-app-region: no-drag;
   .quitIcon {
     opacity: .7;
     background-color: var(--primary-bg-color);
