--- a/src/layouts/ShortSidebarLayout/components/RightSidebar/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/RightSidebar/index.module.less
@@ -6,14 +6,10 @@
   .wrapContainer {
     height: 100%;
     box-sizing: border-box;
-    padding: 24px;
     .innerContainer {
       box-sizing: border-box;
       padding: 16px;
       height: 100%;
-      border-radius: 8px;
-      background: #fff;
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.08);
       &.dark {
         background: #29292f;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
@@ -46,10 +42,23 @@
         overflow-y: auto;
         box-sizing: border-box;
         .message {
+          padding: 24px;
           background: #f5f6f9;
           border-radius: 12px;
+          .reasoningContent {
+            margin: 0 0 16px;
+            background-color: rgba(0, 0, 0, 0.05);
+            border-left: 3px solid rgba(0, 0, 0, 0.4);
+            padding: 16px;
+            color: #454a52;
+          }
           &.dark {
             background: #323233;
+            .reasoningContent {
+              background-color: rgba(255, 255, 255, 0.05);
+              border-left: 3px solid rgba(255, 255, 255, 0.4);
+              color: #abb3be;
+            }
           }
           p:last-child {
             margin-bottom: 0;
@@ -57,13 +66,14 @@
         }
       }
       .input {
+        margin-top: 12px;
         margin-bottom: 12px;
         display: flex;
         flex: none;
         padding: 12px 24px;
         border-radius: 24px;
         box-sizing: border-box;
-        border: 1px solid var(--line-color);
+        background-color: var(--main-bg-color);
         min-height: 36px;
         align-items: center;
         .inputContent {
@@ -79,9 +89,9 @@
 }
 
 .markdown {
-  padding: 16px;
+  //padding: 16px;
   border-radius: 12px;
-  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+  //box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
   font-family: var(--font);
   font-size: var(--font-size);
   code {
