--- a/src/layouts/ShortSidebarLayout/components/Sidebar/SidebarItem/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/Sidebar/SidebarItem/index.module.less
@@ -3,9 +3,18 @@
   align-items: center;
   height: 36px;
   border-radius: 8px;
-  gap: 8px;
+  box-sizing: border-box;
   cursor: pointer;
   padding: 0 8px;
+  font-size: .9em;
+  &.isShort {
+    width: 36px;
+    height: 36px;
+    justify-content: center;
+    .label {
+      display: none;
+    }
+  }
   &.active {
     background: var(--sidebar-active-bg);
   }
@@ -18,6 +27,6 @@
     fill: currentColor;
   }
   .label {
-
+    margin-left: 8px;
   }
 }
