--- a/src/layouts/ThreeColumnLayout/List/TimeRecord/index.module.less
+++ b/src/layouts/ThreeColumnLayout/List/TimeRecord/index.module.less
@@ -1,11 +1,17 @@
 .timeRecordContainer {
-  --select-time-height: 60px;
+  height: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  .selectTime {
+    height: 60px;
+    flex: none;
+  }
   .list {
-    height: calc(100vh - var(--title-bar-height) - var(--select-time-height));
+    flex: 1;
     box-sizing: border-box;
     overflow-y: auto;
     padding: 0 16px;
-    border-top: 20px solid transparent;
     border-bottom: 20px solid transparent;
     &::-webkit-scrollbar {
       display: none;
