feat: 支持导入 Markdown，修复创建卡片后无法看到问题

--- a/src/layouts/ShortSidebarLayout/components/CardView/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/CardView/index.module.less
@@ -89,11 +89,12 @@
           align-items: center;
           justify-content: center;
           cursor: pointer;
-          width: 40px;
-          height: 40px;
+          width: 36px;
+          height: 36px;
           background: #00C7A8;
           border-radius: 50%;
           color: #FFF;
+          flex: none;
         }
       }
       .createCard {
