feat: 支持删除数据库

--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -17,6 +17,7 @@ html[data-theme="dark"] {
   --scroller-thumb-background-color: rgba(255, 255, 255, 0.24);
   --normal-card-bg: #1D1F22;
   --common-hover-bg: #222222;
+  --item-common-hover-bg: rgba(255, 255, 255, 0.08);
   --normal-icon-bg: rgba(255, 255, 255, 0.1);
   --active-bg-color: hsl(168, 80%, 10%);
   --active-text-color: hsl(168, 50%, 80%);
