--- a/src/layouts/ShortSidebarLayout/components/Sidebar/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/Sidebar/index.module.less
@@ -24,9 +24,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-size: 12px;
+    font-size: .9em;
     padding: 0 12px;
     height: 32px;
+    line-height: 32px;
     .icon {
       width: 24px;
       height: 24px;
