--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -9,6 +9,7 @@ html[data-theme='light'] {
   --box-shadow2: 0 4px 21px -12px rgba(0, 0, 0, .6);
   --block-panel-active-bg: #e6e6e6;
   --common-hover-bg: #F5F6F6;
+  --item-common-hover-bg: rgba(0, 0, 0, 0.04);
   --table-border-color: #dadde1;
   --table-odd-bg: #e6e6e666;
   --card-bg-color: rgb(255 255 255 / 0.4);
