--- a/src/components/Editor/extensions/image/components/Image/index.module.less
+++ b/src/components/Editor/extensions/image/components/Image/index.module.less
@@ -15,7 +15,7 @@
   .image {
     max-width: 100%;
     zoom: 50%;
-    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 18%), 0 4px 15px 0 rgba(0, 0, 0, 15%);
+    //box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 18%), 0 4px 15px 0 rgba(0, 0, 0, 15%);
     cursor: zoom-in;
   }
 }
