--- a/src/components/Editor/extensions/code-block/components/SelectLanguage/index.module.less
+++ b/src/components/Editor/extensions/code-block/components/SelectLanguage/index.module.less
@@ -1,6 +1,35 @@
 .selectLanguage {
-  width: 135px;
+  font-size: .8em;
+  opacity: .5;
+  padding: 4px 8px;
+  width: fit-content;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: var(--mono-font);
+  &.disable {
+    cursor: default;
+  }
+  &:not(.disable):hover {
+    background: var(--item-common-hover-bg);
+  }
+}
+
+.languageItem {
+  display: flex;
+  height: 32px;
+  padding: 5px 12px;
+  font-size: .9em;
+  cursor: pointer;
+  transition: all 0.2s;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-family: var(--mono-font);
+
+  align-items: center;
+  &.active {
+    background: var(--item-common-hover-bg);
+  }
   &:hover {
-    cursor: pointer;
+    background: var(--item-common-hover-bg);
   }
 }
