feat: 思维导图能力

--- a/src/components/Editor/extensions/callout/components/Callout/index.module.less
+++ b/src/components/Editor/extensions/callout/components/Callout/index.module.less
@@ -13,7 +13,7 @@
       --hint-border-color: #009400;
       --hint-background-color: #e6ffe6;
       --hint-text-color: #003100;
-      --icon-url: url('@/assets/tip.svg');
+      --icon-url: url('@/assets/icons/tip.svg');
     }
 
     :global(:root[data-theme='dark']) &.tip {
@@ -26,7 +26,7 @@
       --hint-border-color: #4cb3d4;
       --hint-background-color: #eef9fd;
       --hint-text-color: #193c47;
-      --icon-url: url('@/assets/info.svg');
+      --icon-url: url('@/assets/icons/info.svg');
     }
 
     :global(:root[data-theme='dark']) &.info {
@@ -39,7 +39,7 @@
       --hint-border-color: #e13238;
       --hint-background-color: #ffebec;
       --hint-text-color: #4b1113;
-      --icon-url: url('@/assets/danger.svg');
+      --icon-url: url('@/assets/icons/danger.svg');
     }
 
     :global(:root[data-theme='dark']) &.danger {
@@ -52,7 +52,7 @@
       --hint-border-color: #e6a700;
       --hint-background-color: #fff8e6;
       --hint-text-color: #4d3800;
-      --icon-url: url('@/assets/warning.svg');
+      --icon-url: url('@/assets/icons/warning.svg');
     }
 
     :global(:root[data-theme='dark']) &.warning {
@@ -65,7 +65,7 @@
       --hint-border-color: #d4d5d8;
       --hint-background-color: #fdfdfe;
       --hint-text-color: #474748;
-      --icon-url: url('@/assets/note.svg');
+      --icon-url: url('@/assets/icons/note.svg');
     }
 
     :global(:root[data-theme='dark']) &.note {
