--- a/src/layouts/ShortSidebarLayout/index.module.less
+++ b/src/layouts/ShortSidebarLayout/index.module.less
@@ -30,7 +30,7 @@
       overflow: hidden;
       border-radius: 8px;
       .mainContent {
-        width: calc(100% - var(--right-sidebar-width) - 16px);
+        width: calc(100% - var(--right-sidebar-width));
         height: calc(100% - 8px);
         overflow: hidden;
         background: var(--main-bg-color);
