--- a/src/components/WhiteBoard/index.module.less
+++ b/src/components/WhiteBoard/index.module.less
@@ -24,3 +24,34 @@
     display: none;
   }
 }
+
+.statusBar {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  font-size: .8em;
+  padding: 12px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.zoomItem {
+  width: 100px;
+  height: 32px;
+  padding: 5px 12px;
+  font-size: .9em;
+  cursor: pointer;
+  transition: all 0.2s;
+  border-radius: 4px;
+  box-sizing: border-box;
+  &.disabled {
+    cursor: not-allowed;
+    opacity: .5;
+  }
+  &:hover {
+    background-color: var(--item-common-hover-bg);
+  }
+}
