--- a/src/layouts/ShortSidebarLayout/components/CardView/CardTitlebar/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/CardView/CardTitlebar/index.module.less
@@ -1,9 +1,8 @@
 .nav {
   display: flex;
   align-items: center;
-  gap: 8px;
-  border-radius: 8px;
-  padding: 4px;
+  gap: 12px;
+  height: 100%;
   .item {
     cursor: pointer;
     position: relative;
