--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -1,5 +1,5 @@
 html[data-theme='light'] {
-  --primary-bg-color: #ECEDEE;
+  --primary-bg-color: #F8F9FB;
   --main-bg-color: #fff;
   --line-color: #E9E9E9;
   --text-normal: black;
@@ -27,7 +27,7 @@ html[data-theme='light'] {
   --bullet-list-item-shodow: 0 0 0 .3em hsla(168, 90%, 85%, 0.55);
   --selection-color: #D9F0FF;
   --sidebar-background: transparent;
-  --sidebar-active-bg: #FFFFFF;
+  --sidebar-active-bg: #EBF6F7;
   --second-sidevar-background: #f2f3f4;
   --shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
