--- a/src/layouts/ShortSidebarLayout/components/CardView/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/CardView/index.module.less
@@ -1,126 +1,98 @@
-.queryContainer {
-  width: 100%;
-  height: 100%;
-  container: cardListContainer / inline-size;
-}
-
 .container {
   width: 100%;
   height: 100%;
   display: flex;
   --card-tree-width: 240px;
-  --card-grid-width: calc(100% - var(--card-tree-width));
-  --list-width: calc(var(--card-grid-width) + var(--card-tree-width));
-  &.showEdit {
-    --card-grid-width: 0px;
-    .cardContainer {
-      padding: 0;
-    }
-  }
-  
-  .list {
-    width: var(--list-width);
+
+  .viewContainer {
+    width: 100%;
+    height: 100%;
     overflow: hidden;
-    .select {
+    .content {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
       display: flex;
-      margin: 20px 40px;
-      height: 40px;
-      .showCardTreeIcon {
+      .cardTree {
+        background: var(--second-sidevar-background);
+        border: 20px solid transparent;
         box-sizing: border-box;
-        border: 2px solid var(--line-color);
-        margin-right: 12px;
-        width: 40px;
-        height: 40px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 4px;
+        transition: all 0.3s;
+        width: var(--card-tree-width);
         flex: none;
-        cursor: pointer;
-        &:hover {
-          background-color: var(--common-hover-bg);
-        }
-      }
-    }
-    .cards {
-      display: flex;
-      height: 100%;
-    }
-    .cardTree {
-      background: var(--second-sidevar-background);
-      border: 20px solid transparent;
-      box-sizing: border-box;
-      transition: all 0.3s;
-      width: var(--card-tree-width);
-      height: 100%;
-      overflow: auto;
-      &::-webkit-scrollbar {
-        display: none;
-      }
-    }
-    .cardContainer {
-      width: var(--card-grid-width);
-      height: 100%;
-      //padding: 20px 40px;
-      box-sizing: border-box;
-      .cardList {
-        padding: 20px 40px;
         height: 100%;
-        max-width: 720px;
-        margin: 0 auto;
-      }
-      .header {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: 60px;
-        .left {
-          height: 100%;
-          display: flex;
-          align-items: center;
-          gap: 12px;
-          .title {
-            font-size: 30px;
-            font-weight: bold;
-          }
-        }
-        .addCard {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          cursor: pointer;
-          width: 36px;
-          height: 36px;
-          background: #00C7A8;
-          border-radius: 50%;
-          color: #FFF;
-          flex: none;
-        }
-      }
-      .createCard {
-        margin-bottom: 12px;
-      }
-      .list {
-        border-bottom: 20px solid transparent;
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        margin-top: 20px;
-        overflow-y: auto;
-        height: calc(100% - 60px);
+        overflow: auto;
         &::-webkit-scrollbar {
           display: none;
         }
       }
+      .cardContainer {
+        flex: auto;
+        height: calc(100% - var(--title-bar-height));
+        box-sizing: border-box;
+        .titlebar {
+          &.isEdit {
+            background: var(--second-sidevar-background);
+          }
+        }
+        .cardList {
+          padding: 20px 40px;
+          height: 100%;
+          max-width: 720px;
+          margin: 0 auto;
+          .header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            height: 60px;
+            .left {
+              height: 100%;
+              display: flex;
+              align-items: center;
+              gap: 12px;
+              .title {
+                font-size: 30px;
+                font-weight: bold;
+              }
+            }
+            .addCard {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              cursor: pointer;
+              width: 36px;
+              height: 36px;
+              background: #00C7A8;
+              border-radius: 50%;
+              color: #FFF;
+              flex: none;
+            }
+          }
+          .createCard {
+            margin-bottom: 12px;
+          }
+          .list {
+            border-bottom: 20px solid transparent;
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            margin-top: 20px;
+            overflow-y: auto;
+            height: calc(100% - 60px);
+            &::-webkit-scrollbar {
+              display: none;
+            }
+          }
+        }
+        .edit {
+          width: 100%;
+          height: 100%;
+          flex: none;
+          display: flex;
+        }
+      }
     }
-  }
-  .edit {
-    width: calc(100% - var(--list-width));
-    height: 100%;
-    flex: none;
-    display: flex;
-    gap: 20px;
   }
 }
 
@@ -138,14 +110,6 @@
     &.disable {
       cursor: not-allowed;
       opacity: 0.5;
-    }
-  }
-}
-
-@container cardListContainer (max-width: 1080px) {
-  .container {
-    &.showEdit {
-      --list-width: 0px;
     }
   }
 }
