--- a/src/layouts/ShortSidebarLayout/components/Sidebar/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/Sidebar/index.module.less
@@ -64,13 +64,13 @@
       margin-bottom: 8px;
       border-radius: 8px;
       transition: color 0.2s;
-      --search-bg-color: #dddedf;
+      --search-bg-color: #EEF0F5;
       --search-color: rgba(60, 60, 67, .78);
       --kbd-border-color: #e2e2e3;
       --search-border-color: transparent;
       background-color: var(--search-bg-color);
       color: var(--search-color);
-      border: 1px solid var(--search-border-color);
+      //border: 1px solid var(--search-border-color);
       span {
         display: inline-block;
         margin-top: 2px;
@@ -81,7 +81,7 @@
         font-size: 15px;
         font-family: var(--mono-font);
         display: block;
-        border: 1px solid var(--kbd-border-color);
+        //border: 1px solid var(--kbd-border-color);
         border-radius: 4px;
         padding: 0 6px;
         width: auto;
