--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -1,6 +1,6 @@
 html[data-theme="dark"] {
-  --primary-bg-color: #0a0a0a;
-  --main-bg-color: #121212;
+  --primary-bg-color: #242424;
+  --main-bg-color: #191919;
   --line-color: rgba(86, 84, 84, .8);
   --text-normal: rgba(255, 255, 255, .9);
   --code-normal: #FBDE2D;
@@ -26,7 +26,8 @@ html[data-theme="dark"] {
   --bullet-list-item-shodow: 0 0 0 .3em hsla(168, 90%, 85%, 0.55);
   --selection-color: #182F3F;
   --sidebar-background: transparent;
-  --sidebar-active-bg: #2E2E2E;
-  --second-sidevar-background: #262626;
-  --shadow: 0 2px 4px rgba(0,0,0,0.3), 0 0 12px rgba(255,255,255,0.1);
+  --sidebar-active-bg: #313131;
+  --second-sidevar-background: #363636;
+  --shadow: 0 4px 5px rgba(200, 220, 255, 0.15),
+            0 8px 10px rgba(158, 178, 255, 0.1);
 }
