--- a/src/components/WhiteBoard/index.module.less
+++ b/src/components/WhiteBoard/index.module.less
@@ -30,6 +30,7 @@
   bottom: 10px;
   right: 10px;
   background: #fff;
+  color: #000;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   font-size: .8em;
