--- a/src/layouts/ShortSidebarLayout/components/CardLinkGraph/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/CardLinkGraph/index.module.less
@@ -17,9 +17,8 @@
   .graph {
     width: var(--graph-width);
     height: 100%;
-    // padding: 40px;
     transition: width 0.3s;
-    background: var(--second-sidevar-background);
+    background: var(--main-bg-color);
   }
   .edit {
     width: calc(100% - var(--graph-width));
