--- a/src/layouts/ShortSidebarLayout/components/RightSidebar/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/RightSidebar/index.module.less
@@ -2,9 +2,12 @@
   box-sizing: border-box;
   flex: none;
   height: 100%;
-  background: var(--sidebar-background);
   .wrapContainer {
-    height: 100%;
+    height: calc(100% - 8px);
+    background: var(--main-bg-color);
+    margin: 0 8px 8px 0;
+    border-radius: 8px;
+    box-shadow: var(--shadow);
     box-sizing: border-box;
     .innerContainer {
       box-sizing: border-box;
