--- a/src/layouts/components/Titlebar/index.module.less
+++ b/src/layouts/components/Titlebar/index.module.less
@@ -1,6 +1,6 @@
 .titleBar {
   box-sizing: border-box;
-  padding: 16px;
+  padding: 0 12px 0 0;
   height: 100%;
   display: flex;
   align-items: center;
