--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -1,5 +1,5 @@
 html[data-theme='light'] {
-  --primary-bg-color: #ECEDEE;
+  --primary-bg-color: #F8F9FB;
   --main-bg-color: #fff;
   --line-color: #E9E9E9;
   --text-normal: black;
@@ -8,7 +8,7 @@ html[data-theme='light'] {
   --box-shadow1: 0 3px 6px 0 rgba(0, 0, 0, .15);
   --box-shadow2: 0 4px 21px -12px rgba(0, 0, 0, .6);
   --block-panel-active-bg: #e6e6e6;
-  --common-hover-bg: #F5F6F6;
+  --common-hover-bg: #EEF0F5;
   --item-common-hover-bg: rgba(0, 0, 0, 0.04);
   --table-border-color: #dadde1;
   --table-odd-bg: #e6e6e666;
@@ -27,7 +27,7 @@ html[data-theme='light'] {
   --bullet-list-item-shodow: 0 0 0 .3em hsla(168, 90%, 85%, 0.55);
   --selection-color: #D9F0FF;
   --sidebar-background: transparent;
-  --sidebar-active-bg: #FFFFFF;
+  --sidebar-active-bg: #e8f0f6;
   --second-sidevar-background: #f2f3f4;
   --shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
