--- a/src/layouts/ShortSidebarLayout/components/RightSidebar/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/RightSidebar/index.module.less
@@ -76,7 +76,7 @@
         padding: 12px 24px;
         border-radius: 24px;
         box-sizing: border-box;
-        background-color: var(--main-bg-color);
+        background-color: var(--primary-bg-color);
         min-height: 36px;
         align-items: center;
         .inputContent {
