--- a/src/layouts/ShortSidebarLayout/components/ProjectView/ProjectList/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/ProjectView/ProjectList/index.module.less
@@ -1,40 +1,53 @@
 .list {
   padding: 0 16px;
-  height: 100vh;
-  overflow-y: auto;
+  height: 100%;
   border-top: 16px solid transparent;
   border-bottom: 16px solid transparent;
   box-sizing: border-box;
   display: flex;
-  gap: 4px;
   flex-direction: column;
+
   .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 40px;
     padding: 0 12px;
+    flex-shrink: 0;
+
     .title {
       display: flex;
       align-items: center;
       gap: 12px;
     }
+
     .icons {
       display: flex;
       align-items: center;
       gap: 12px;
+
       .icon {
         cursor: pointer;
       }
     }
   }
+
   .divider {
     height: 1px;
     background: var(--line-color);
     padding: 0 12px;
     margin: 12px 0;
   }
-  &::-webkit-scrollbar {
-    display: none;
+
+  .contentArea {
+    flex: 1;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
