--- a/src/components/WhiteBoard/index.module.less
+++ b/src/components/WhiteBoard/index.module.less
@@ -27,16 +27,19 @@
 
 .statusBar {
   position: absolute;
-  bottom: 10px;
-  right: 10px;
+  bottom: 20px;
+  right: 20px;
   background: #fff;
+  height: 48px;
   color: #000;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   font-size: 0.8em;
-  padding: 12px;
+  padding: 0 12px;
   cursor: pointer;
   user-select: none;
+  display: flex;
+  align-items: center;
 }
 
 .zoomItem {
@@ -48,10 +51,12 @@
   transition: all 0.2s;
   border-radius: 4px;
   box-sizing: border-box;
+
   &.disabled {
     cursor: not-allowed;
     opacity: 0.5;
   }
+
   &:hover {
     background-color: var(--item-common-hover-bg);
   }
