feat: 添加草图渲染器和相关设置器，支持多种几何图形的草图风格，优化白板的绘图体验

--- a/src/components/WhiteBoard/components/Geometry/index.module.less
+++ b/src/components/WhiteBoard/components/Geometry/index.module.less
@@ -7,20 +7,28 @@
   justify-content: center;
   text-align: center;
   box-sizing: border-box;
+
   &.left {
     text-align: left;
     justify-content: flex-start;
   }
+
   &.right {
     text-align: right;
     justify-content: flex-end;
   }
+
   &.center {
     text-align: center;
     justify-content: center;
   }
+
   &.readonly {
     user-select: none;
     pointer-events: none;
   }
+}
+
+.svgContainer {
+  overflow: visible;
 }
