--- a/src/layouts/ShortSidebarLayout/components/AISearch/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/AISearch/index.module.less
@@ -14,31 +14,40 @@
   left: 0;
   top: 0;
   z-index: 100;
+
   .mask {
     position: absolute;
     width: 100%;
     height: 100%;
     background: rgba(17, 25, 39, 0.8);
+
     &.dark {
       background: rgba(17, 25, 39, 0.95);
     }
   }
+
   .panel {
     position: absolute;
     width: 540px;
-    top: calc(50% - 240px);
+    max-height: 80vh;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     background-color: white;
+
     &.dark {
       background-color: rgba(10, 8, 23, 0.95);
     }
+
     box-shadow:
       rgba(0, 0, 0, 0) 0px 0px 0px 0px,
       rgba(0, 0, 0, 0) 0px 0px 0px 0px,
       rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
       rgba(0, 0, 0, 0.1) 0px 4px 6px -4px;
     border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+
     .searchHeader {
       display: flex;
       width: 100%;
@@ -47,6 +56,7 @@
       box-sizing: border-box;
       align-items: center;
       border-bottom: 1px solid var(--line-color);
+
       .searchIcon {
         flex: none;
         width: 40px;
@@ -55,26 +65,61 @@
         align-items: center;
         justify-content: center;
       }
+
       .search {
         flex: 1;
       }
     }
+
     .resultContainer {
-      max-height: 400px;
-      overflow-y: auto;
+      flex: 1;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+
+      :global {
+        .ant-tabs {
+          display: flex;
+          flex-direction: column;
+          height: 100%;
+        }
+
+        .ant-tabs-nav {
+          margin: 0;
+          padding: 0 16px;
+          background-color: inherit;
+          position: sticky;
+          top: 0;
+          z-index: 10;
+        }
+
+        .ant-tabs-content {
+          flex: 1;
+          overflow-y: auto;
+          max-height: calc(80vh - 110px);
+        }
+
+        .ant-tabs-tabpane {
+          padding: 0;
+        }
+      }
+
       .list {
         display: flex;
         flex-direction: column;
         gap: 16px;
-        padding: 12px;
+        padding: 16px;
+
         .item {
           position: relative;
           border-radius: 8px;
           padding: 16px;
           cursor: pointer;
+
           &:hover {
             background-color: var(--common-hover-bg);
           }
+
           &:not(:last-child) {
             &::after {
               content: "";
