feat: 将设置弹窗修改为设置页面

--- a/src/pages/Settings/SyncSetting/index.module.less
+++ b/src/pages/Settings/SyncSetting/index.module.less
@@ -1,4 +1,10 @@
+@import "../common.module.less";
+
 .syncSetting {
+  h2 {
+    margin-bottom: 16px;
+  }
+
   .version {
     display: flex;
     align-items: center;
@@ -7,6 +13,7 @@
     line-height: 30px;
     margin-top: 12px;
   }
+
   .upload {
     margin-top: 12px;
     display: flex;
@@ -15,6 +22,7 @@
     line-height: 30px;
     gap: 8px;
   }
+
   .download {
     margin-top: 12px;
     display: flex;
@@ -23,6 +31,7 @@
     line-height: 30px;
     gap: 8px;
   }
+
   .settings {
     margin-top: 20px;
   }
